# stringArt-cpp

./: .gitignore  CMakeLists.txt  Chromosome.cpp  Chromosome.h  Gene.cpp  Gene.h  README.md  main.cpp  parameters.h
